--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @article.title %></h1>
 <h1><%= @article.content %></h1>
 
-<h2><%= link_to "Home Page", articles_path(@articles) %></h2>
+<h2><%= link_to "Return to Home Page", articles_path(@articles) %></h2>
 
 
